# onnxruntime-ocr-cpp

./: CMakeLists.txt  PaddleOCR.cpp  PaddleOCR.hpp  README.md  main.cpp
model/: cls_mobile.onnx
